--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,20 @@ body{
     height: 100vh;
     display: flex;
     justify-content: center;
+    background-color: #19181F;
 }
 
 main{
+    color: white;
     max-width: 550px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.newItem>div>label{
+    margin-top: 1em;
 }
 
 .resume{
@@ -32,10 +38,11 @@ main{
 .resume>div{
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 5px #ccc;
+    box-shadow: 0px 0px 5px rgb(85, 85, 85);
     border-radius: 10px;
     padding: 10px;
     width: 150px;
+    background-color: #1E1E26;
 }
 
 .newItem{
@@ -91,11 +98,11 @@ i{
 }
 
 .bxs-chevron-up-circle{
-    color: #00C9A7;
+    color: #07D962;
 }
 
 .bxs-chevron-down-circle{
-    color: #D83121;
+    color: #67159C;
 }
 
 .colummnAction {
